--- a/photography.html
+++ b/photography.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photography - Alexandru Moga</title>
+    <title>Photography</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .photo-gallery img {
+            width: 1024px; /* Adjust the width as needed */
+            height: auto; /* Maintain aspect ratio */
+        }
+    </style>
 </head>
 <body>
     <header>
